--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <ul>
             <li>English C2</li>
             <li>German C2</li>
+            <li>French B2</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -170,7 +171,7 @@
         <div class="optional-section-block">
             <h3>
             <p>
-                For more Information, or if you have any questions, please write a mail to:
+                For more information, or if you have any questions, please feel free to write me an Email at:
             </p>
             <p>
                 <a href="mailto:lisa@hoebenreich.com">lisa@hoebenreich.com</a>
