--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                     <p>
                         Copyright &copy; <span id="current-year">2025</span> Lisa Höbenreich
                     </p>
+                    <p>
+                    <a href="https://www.flaticon.com/free-icons/books" title="books icons">Books favicon created by Freepik - Flaticon</a>
+                    </p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
@@ -197,6 +200,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
     <!-- End footer -->
 
