--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Lisa Höbenreich</h1>
+            <h1>Lisa Höbenreich, MA BA</h1>
             <h2>Editor & Lektor</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -66,6 +66,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
+
+                    <img src="profile.jpg" alt="Picture of Lisa Höbenreich" style="width:150px;height:206px;">
+                    <br>
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
