--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Lisa Höbenreich, MA BA</h1>
+            <h1>Lisa Höbenreich, BA MA</h1>
             <h2>Editor & Lektor</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
