--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="lead-content">
             <h1>Lisa Höbenreich, BA MA</h1>
             <h2>Editor & Lektor</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="cv_hoebenreich.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -171,7 +171,7 @@
 
     <div id="contact" class="optional-section background-alt">
         <h2>Get in Touch</h2>
-        <div class="optional-section-block">
+        <div id="contact-form">
             <h3>
             <p>
                 For more information, or if you have any questions, please feel free to write me an Email at:
@@ -193,7 +193,7 @@
                         Copyright &copy; <span id="current-year">2025</span> Lisa Höbenreich
                     </p>
                     <p>
-                    <a href="https://www.flaticon.com/free-icons/books" title="books icons">Books favicon created by Freepik - Flaticon</a>
+                        <a href="https://www.flaticon.com/free-icons/books" title="books icons">Books favicon created by Freepik - Flaticon</a>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
