--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
     <!-- End #skills -->
 
-    <div id="contact" class="optional-section background-alt">
+    <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <h3>
