--- a/index.html
+++ b/index.html
@@ -201,9 +201,19 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
+                <div class="col-sm-5 impressum-container">
+                    <span class="impressum-hover">Impressum
+                        <div class="impressum-box">
+                            <strong>Contact Information</strong><br>
+                            Lisa Höbenreich<br>
+                            Email: <a href="mailto:lisa@hoebenreich.com">lisa@hoebenreich.com</a><br>
+                            Address: Anzengrubergasse 18/3, 8700 Leoben
+                        </div>
+                    </span>
+                </div>            
             </div>
         </div>
-
+        
     </footer>
     <!-- End footer -->
 
