--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>Lisa Höbenreich</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -202,7 +201,7 @@
                     </span>
                 </div>
                 <div class="col-sm-5 impressum-container">
-                    <span class="impressum-hover">Impressum
+                    <span class="impressum-hover"><p>Impressum</p>
                         <div class="impressum-box">
                             <strong>Contact Information</strong><br>
                             Lisa Höbenreich<br>
