--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
             <li>English C2</li>
             <li>German C2</li>
             <li>French B2</li>
+            <li>Critical Thinking</li>
+            <li>Scheduling and Time Management</li>
+            <li>ECDL Advanced</li>
+            <li>Multitasking</li>
         </ul>
     </div>
     <!-- End #skills -->
