--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <strong>Contact Information</strong><br>
                             Lisa Höbenreich<br>
                             Email: <a href="mailto:lisa@hoebenreich.com">lisa@hoebenreich.com</a><br>
-                            Address: Anzengrubergasse 18/3, 8700 Leoben
+                            Address: 8700, Leoben
                         </div>
                     </span>
                 </div>            
