--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="experience-timeline">
             <div data-date="August 2023 – ">
                 <h3>ÖAW</h3>
-                <h4>Editor</h4>
+                <h4>Freelance Editor</h4>
                 <p>
                     Editing of scientific articles.
                 </p>
